fixed locating issue with html files

--- a/Dog Army program.html
+++ b/Dog Army program.html
@@ -85,7 +85,7 @@
                                     <p>The more dogs we have the easier it is to subdue people with high energy fluff balls</p>
                 </div>
             <footer>
-                                    <a href="Dogs.html">Back to the wonderful world of dogs</a>    
+                                    <a href="index.html">Back to the wonderful world of dogs</a>    
                                     <p style="text-align:center;">or</p>
                                     <a href="dogs Produce  CO2.html">Learn about how else dogs can be lethal</a>
             </footer>
