--- a/dogs Produce  CO2.html
+++ b/dogs Produce  CO2.html
@@ -95,7 +95,7 @@ nav {
             <body>
     <main>
                     <nav>
-                        <a href="dogs.html">Dogs and what they can do</a>
+                        <a href="index.html">Dogs and what they can do</a>
                         <span>This is not a serious issue</span>
                         <a href="Dog Army program.html">JOIN THE DOG ARMY</a>
                     </nav>
